force-app/main/default/objects/Event_Speaker__c/fields/Duplicate_found__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate found</label>
    <type>Checkbox</type>
</CustomField>