force-app/main/default/objects/Event_Speaker__c/validationRules/Duplicate_Found.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate_Found</fullName>
    <active>true</active>
    <errorConditionFormula>Duplicate_found__c</errorConditionFormula>
    <errorMessage>Duplicate record found</errorMessage>
</ValidationRule>