force-app/main/default/objects/Event_Speaker__c/validationRules/Speaker_End_Date_And_Event_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Speaker_End_Date_And_Event_Rule</fullName>
    <active>true</active>
    <description>Speaker can only be associated with the Event whose End Date is in future &amp; Event Live Checkbox is checked</description>
    <errorConditionFormula>AND(Event__r.End_date__c &lt;= DATETIMEVALUE( TODAY() ),Event__r.Live__c = false,Speaker__c != NULL )</errorConditionFormula>
    <errorDisplayField>Speaker__c</errorDisplayField>
    <errorMessage>Speaker can only be associated with the Event whose End Date is in future &amp; Event Live Checkbox is checked</errorMessage>
</ValidationRule>